--- a/project-front/src/components/Style/text.module.css
+++ b/project-front/src/components/Style/text.module.css
@@ -1,33 +1,21 @@
-h1.mp {
+h1 {
     color: #FFF;
     font-size: 32px;
-    margin-bottom: 25px;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
-p.mp {
+p {
     color: #FFF;
     font-size: 24px;
-    margin-bottom: 1rem;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
-}
-
-p.start {
     margin-top: 0;
-}
-
-p.last {
     margin-bottom: 0;
 }
 
 p.underLine {
     text-decoration-line: underline;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-a.nav-link {
-    color: #747474;
-    text-decoration-line: none;
 }
 
 /* Outline */
