--- a/project-front/src/App.css
+++ b/project-front/src/App.css
@@ -37,7 +37,9 @@ main {
   align-items: center;
 }
 
-.memeber_main_image{
+.member_main_image{
+  display: flex;
+  margin: auto;
   max-width: 100%; /* 이미지가 부모 요소에 맞게 조절되도록 최대 너비 지정 */
   height: auto;
 }
