--- a/project-front/src/components/Style/page2.module.css
+++ b/project-front/src/components/Style/page2.module.css
@@ -247,3 +247,39 @@
     font-weight: bolder;
     font-size: 35px;
 }
+.timeline{
+    color: #4285F5;
+    font-size: 60px;
+    font-weight: bolder;
+    text-decoration: none;
+    margin-left: 30vh;
+    margin-top: 10vh;
+    margin-bottom: 70px;
+}
+.timeline__Data{
+    margin-left: 40vh;
+    font-size: 25px;
+    text-decoration: none;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+.nameData {
+    width: 250px;
+    display: inline-block;
+    justify-content: center;
+}
+.repositoryData {
+    display: inline-block;
+    background-color: #4285F5;
+    width: 200px;
+    height: 35px;
+    display: inline-block;
+    border-radius: 7px;
+    text-decoration: none;
+}
+a {
+  text-decoration: none;
+  color: white;  
+  font-weight: bold;
+  margin-left: 40px;
+}
