--- a/project-front/src/components/Style/page2.module.css
+++ b/project-front/src/components/Style/page2.module.css
@@ -1,4 +1,87 @@
 @import "reset.module.css";
+.body{
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    height: 100vh;
+}
+
+
+
+.actBackground{
+    background: linear-gradient(90deg, #f4d455 45%, #7dfca9 80%);
+    padding: 80px;
+    text-align: center;
+    width: 89.4%;
+    height: 500px;
+    margin-top: 70px;
+    color: #595959;
+}
+
+.act{
+    margin-top: 50px;
+    margin-bottom: 50px;
+    font-size: 120px;
+    text-shadow:
+    -1px -1px 3px whitesmoke,
+    1px -1px 3px whitesmoke,
+    -1px 1px 3px whitesmoke,
+    1px 1px 3px whitesmoke;
+}
+
+.nav1{
+    padding-top: 70px;
+    padding-bottom: 70px;
+}
+
+.nav__linkS1 {
+    color: white;
+    text-decoration: none;
+    font-size: 50px;
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    margin-right: 120px;
+
+}
+.nav__linkS2 {
+    color: white;
+    text-decoration: none;
+    font-size: 50px;
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    margin-left: 120px;
+
+}
+.nav__linkE {
+    color:white;
+    text-decoration: none;
+    color: white;
+    text-decoration: none;
+    font-size: 50px;
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+}
+@media screen and (max-width: 768px) {
+    .greenBox {
+      padding: 40px;
+      height: auto;
+    }
+  
+    .act {
+      font-size: 80px;
+      margin-top: 30px;
+      margin-bottom: 30px;
+    }
+  
+    .nav1 {
+      padding: 20px;
+    }
+  
+    .nav__linkS1,
+    .nav__linkS2,
+    .nav__linkE {
+      margin: 20px;
+      font-size: 30px;
+    }
+  }
 .screen_header {
     display: flex;
     margin-top: 30px;
@@ -202,84 +285,4 @@
     margin-bottom: 30px;
     font-weight: bold;
     color: #595959;
-}
-.bx {
-    margin: 30px;
-    border: 2px solid #7474;
-    border-radius: 10px;
-    height: 80vh;
-    position: relative;
-
-}
-.bx-graybx {
-    margin-top: 10%;
-    margin-left: calc((100% - 60vh) / 2);;
-    width: 60vh;
-    height: 20vh;
-    border-radius: 10px;
-    background-color: #E4E4E4;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.bx-graybx-apply{
-    text-decoration: none;
-    color: black;
-    font-size: 50px;
-    font-weight: bolder;
-}
-.bx-word1{
-    margin-top: 50px;
-    display: flex;
-    justify-content: center;
-    text-decoration: none;
-    color: #747474;
-    font-weight: bold;
-
-}
-
-.bx-word2{
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
-    text-decoration: none;
-    color: #595959;
-    font-weight: bolder;
-    font-size: 35px;
-}
-.timeline{
-    color: #4285F5;
-    font-size: 60px;
-    font-weight: bolder;
-    text-decoration: none;
-    margin-left: 30vh;
-    margin-top: 10vh;
-    margin-bottom: 70px;
-}
-.timeline__Data{
-    margin-left: 40vh;
-    font-size: 25px;
-    text-decoration: none;
-    font-weight: bold;
-    margin-bottom: 20px;
-}
-.nameData {
-    width: 250px;
-    display: inline-block;
-    justify-content: center;
-}
-.repositoryData {
-    display: inline-block;
-    background-color: #4285F5;
-    width: 200px;
-    height: 35px;
-    display: inline-block;
-    border-radius: 7px;
-    text-decoration: none;
-}
-a {
-  text-decoration: none;
-  color: white;  
-  font-weight: bold;
-  margin-left: 40px;
 }
