--- a/project-front/src/components/Style/page2.module.css
+++ b/project-front/src/components/Style/page2.module.css
@@ -1,4 +1,6 @@
 @import "reset.module.css";
+
+/* Activities Page */
 .body{
     padding: 0;
     display: flex;
@@ -13,7 +15,7 @@
     background: linear-gradient(90deg, #f4d455 45%, #7dfca9 80%);
     padding: 80px;
     text-align: center;
-    width: 89.4%;
+    width: auto;
     height: 500px;
     margin-top: 70px;
     color: #595959;
@@ -82,20 +84,21 @@
       font-size: 30px;
     }
   }
+
+/* Seminars Page */
+
 .screen_header {
     display: flex;
-    margin-top: 30px;
+    margin-top: 100px;
     align-items: center;
 }
+
 .screen_header__title{
     font-size: 40px;
     font-weight: 700;
+    color: rgb(33, 33, 33);
     text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
     margin-left: 280px;
-}
-.screen_header__icon {
-    font-size: 45px;
-    margin-left: 15px;
 }
 
 .screen_header__underline {
@@ -114,73 +117,92 @@
     color: #595959;
 }
 
-.seminar_box1{
-    margin-top: 30px;
-    overflow-y: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0px 150px;
-    /* overflow-x: auto; */
-}
-.seminar_box2 {
+.container{
+    margin-left: 200px;
     margin-top: 50px;
-    display: flex;
     justify-content: center;
+    align-items: center;
 }
-
-/* .seminar_box__row {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-} */
-
-.seminar_box__green {
-    width: 560px;
-    height: 250px;
-    border:6px solid #119D5A;
-    border-radius: 7%;
-    padding-top: 6%;
+.container__box{
+    border: 6px solid #119D5A;
+    border-radius: 20px;
+    padding: 20px;
+    margin-bottom: 20px;
+    width: 50vw;
+    height: 16vh;
+    text-align: center;  
 }
-.seminar_box__word {
+.container .container__box:nth-child(2) {
+    margin-left: 300px;
+}
+.box__title{
+    font-weight: bold;
     color: #119D5A;
-    font-weight: bolder;
     font-size: 30px;
-    display: flex;
-    align-items: first baseline;
-    justify-content: center;
-    margin-top: 10px;
-    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+    margin-bottom: 10px;
 }
-.seminar_box__text1 {
-    padding: 10px;
-    margin-top: 20px;
-}
-.seminar_box__texta {
-    display: flex;
-    justify-content: center;
-    color: #4D4D4D;
-    font-weight: 600;
+.box__explain{
+    font-weight: bold;
+    font-size: 20px;
+    color: #595959;
 }
 
 .seminar_previous {
     background-color: #119D5A;
-    width: 300px;
+    width: 13vw;
     height: 50px;
     border-radius: 15px;
     display: flex;
     align-items: center;
-    justify-content: center;
     margin-left: auto;
     margin-right : auto;
     margin-top:40px;
 }
-.seminar_previous__text{
+.seminar-previous__text{
     font-size: 25px;
     font-weight: 600;
     text-decoration: none;
     color: white;
 }
+@media screen and (max-width: 1111px) {
+    .screen_header__title {
+      margin: auto;
+      font-size: 4vw;
+    }
+    .screen_header__underline {
+        width: auto;
+    }
+    .seminar_p {
+        font-size: 3vw;
+    }
+  
+    .container {
+      margin-left: 20px;
+      display: flex;
+      flex-direction: column;
+    }
+  
+    .container__box {
+      width: 80vw;
+      height: 15vh;
+      margin-left: 0;
+      border: 1px solid #119D5A;
+
+    }
+  
+    .container .container__box:nth-child(2) {
+      margin-left: 0;
+    }
+    .box__title {
+        font-size: 3vw;
+    }
+    .box__explain {
+        font-size: 2vw;
+    }
+    
+  }
+
+  /* Session Page */
 .session_header {
     margin-top: 20px;
     height: 250px;
@@ -211,7 +233,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
 }
 .session_text{
     width: 360px;
@@ -266,6 +287,23 @@
     text-decoration: none;
     font-weight: 600;
 }
+@media screen and (max-width: 1111px) {
+    .session_circle{
+        margin-top: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .session_text{
+        border-radius: 0%;
+        width: 50vw;
+        height: 30vh;
+        margin-bottom: 10px;
+    }
+    
+}
+
 .expect_text {
     margin-top: 50px;
     margin-left: 150px;
