--- a/project-front/src/components/Style/timeline.module.css
+++ b/project-front/src/components/Style/timeline.module.css
@@ -5,61 +5,26 @@
     font-size: 60px;
     font-weight: bolder;
     text-decoration: none;
-    margin-left: 30vh;
+    margin-left: 20vh;
     margin-top: 10vh;
     margin-bottom: 70px;
 }
-.timeline__Data{
-    margin-left: 40vh;
-    font-size: 25px;
-    text-decoration: none;
-    font-weight: bold;
-    margin-bottom: 20px;
+.commit{
+  color: rgb(100, 100, 100);
+  display: flex;
+  margin-left: 20vh;
 }
-.nameData {
-    width: 75px;
-    display: inline-block;
-    justify-content: center;
-}
-.repositoryData {
-    display: inline-block;
-    background-color: #4285F5;
-    width: 200px;
-    height: 35px;
-    display: inline-block;
-    border-radius: 7px;
-    text-decoration: none;
-}
-a {
+.commit_link{
   text-decoration: none;
-  color: white;  
-  font-weight: bold;
-  margin-left: 40px;
+  color: #4285F5;
 }
+.commit_link:hover{
+  color: #184fac;
+}
+
 @media screen and (max-width: 768px) {
     .timeline {
       font-size: 40px;
-      margin-left: 10px;
-    }
-  
-    .timeline__Data {
-      margin-left: 10px;
-      font-size: 18px;
-    }
-  
-    .nameData {
-      text-align: center;
-      margin-bottom: 10px;
-      width: 55px;
-    }
-  
-    .repositoryData {
-      margin-top: 10px;
-      width: 110px;
-      height: 25px;
-    }
-  
-    a {
       margin-left: 10px;
     }
   }
