--- a/project-front/src/components/Style/timeline.module.css
+++ b/project-front/src/components/Style/timeline.module.css
@@ -2,12 +2,15 @@
 
 .timeline{
     color: #4285F5;
-    font-size: 60px;
+    font-size: 4vw;
     font-weight: bolder;
     text-decoration: none;
     margin-left: 20vh;
     margin-top: 10vh;
-    margin-bottom: 70px;
+    margin-bottom: 5vh;
+}
+.commit_list{
+  font-size: 2vw;
 }
 .commit{
   color: rgb(100, 100, 100);
@@ -16,23 +19,49 @@
 }
 .commit_link{
   text-decoration: none;
-  color: #4285F5;
+  color: white;
+  background-color: #4285F5;
+  border-radius: 15px;
+  width: 17vw;
 }
 .commit_link:hover{
-  color: #184fac;
+  background-color: #184fac;
+}
+.commit_time{
+  color: rgb(57, 57, 57);
+  display: flex;
+  margin-left: 22vh;
 }
 
 @media screen and (max-width: 768px) {
     .timeline {
-      font-size: 40px;
+      font-size: 6vw;
       display: flex;
-      align-items: center;
     }
     .commit_list{
-      padding: 1.5vh;
+      padding: 1.0vh;
     }
-    .commit {
+    .commit{
+      font-size: 2.5vw;
+    }
+  }
+  @media screen and (max-width: 425px) {
+    .timeline{
+      margin-top: 5vh;
+      margin-bottom: 2vh;
+      font-size: 8vw;
       display: flex;
-      margin-left: 0;
+      margin-left: 5vw;
     }
+    .commit_list{
+      display: flex;
+      flex-direction: column;
+    }
+    .commit,.commit_time{
+      display: flex;
+      margin-left: 3.8vw;
+      font-size: 3vw;
+      font-weight: bold;
+    }
+    
   }
